[package]
name = "vino-collection-inmemory"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2018"

[[bin]]
name = "vino-collection-inmemory"
path = "src/main.rs"

[dependencies]
thiserror = "1.0.25"
vino-provider = { path="../vino-provider" }
vino-provider-cli = { path="../vino-provider-cli" }
vino-component = { path="../vino-component" }
vino-codec = { path="../vino-codec" }
vino-rpc = { path="../vino-rpc" }
vino-runtime = { path="../vino-runtime" }
serde = { version="1.0.118", features=["derive"] }
lazy_static = "1.4.0"
async-trait = "0.1.50"
futures = "0.3.15"
tokio = { version="1.4.0", features=["macros", "rt", "sync", "rt-multi-thread"] }
env_logger = "0.8.4"
tokio-util = { version="0.6.7", features=["codec"] }
structopt = "0.3.21"
tracing = "0.1.26"

[dev-dependencies]
maplit = "1.0.2"
test-env-log = "0.2.7"
env_logger = "0.8.4"
serde_json = "1.0.64"
backtrace = "0.3.60"
test_bin = "0.3.0"
tonic = "0.4.3"
tracing-subscriber = "0.2.19"
