[package]
name = "vino-collection-inmemory"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "vino-collection-inmemory"
path = "src/main.rs"

[dependencies]
thiserror = "1.0.25"
vino-provider = { path = "../vino-provider", features = ["native"] }
vino-provider-cli = { path = "../vino-provider-cli" }
vino-component = { path = "../vino-component" }
vino-codec = { path = "../vino-codec" }
vino-rpc = { path = "../vino-rpc" }
vino-runtime = { path = "../vino-runtime" }
vino-interfaces-collection = { path = "../interfaces/interfaces-collection" }
serde = { version = "1.0.118", features = ["derive"] }
lazy_static = "1.4.0"
async-trait = "0.1.50"
futures = "0.3.15"
tokio = { version = "1.4.0", features = ["macros", "sync", "rt-multi-thread"] }
env_logger = "0.9.0"
tokio-util = { version = "0.6.7", features = ["codec"] }
structopt = "0.3.21"
log = "0.4"

[dev-dependencies]
test-env-log = "0.2.7"
serde_json = "1.0.64"
backtrace = "0.3.60"
test_bin = "0.3.0"
tonic = "0.5.0"
anyhow = "1.0.42"
test-interfaces-collection = { path = "../integration/test-interfaces-collection" }
