[package]
name = "vino-native-api-0"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
vino-provider = { path = "../vino-provider", features = ["native"] }
vino-rpc = { path = "../vino-rpc" }
vino-codec = { path = "../vino-codec" }
vino-component = { path = "../vino-component" }
vino-entity = { path = "../vino-entity" }
log = "0.4"
serde = { version = "1.0.118", features = ["derive"] }
lazy_static = "1.4.0"
async-trait = "0.1.50"
futures = "0.3.15"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.25"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
maplit = "1.0.2"
test-env-log = "0.2.7"
env_logger = "0.9"
vino-transport = { path = "../vino-transport" }
