[package]
name = "vino-native-api-0"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2018"
license = "BSD-3-Clause"

[dependencies]
vino-provider = { path = "../../sdk/crates/vino-provider", features = [
  "native",
] }
vino-rpc = { path = "../vino-rpc" }
vino-packet = { path = "../../sdk/crates/vino-packet" }
vino-entity = { path = "../../sdk/crates/vino-entity" }
log = "0.4"
serde = { version = "1.0.118", features = ["derive"] }
async-trait = "0.1.50"
futures = "0.3.15"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.25"
uuid = { version = "0.8.2", features = ["v4"] }

[dev-dependencies]
maplit = "1.0.2"
logger = { path = "../logger" }
test-logger = { path = "../test-logger" }

vino-transport = { path = "../../sdk/crates/vino-transport" }
