[package]
name = "vino-native-api-0"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"

[features]
default = ["native", "provider"]
provider = []
guest = []
wasm = ["vino-provider/wasm"]
native = ["vino-provider/native"]

[dependencies]
vino-provider = { path = "../../sdk/crates/vino-provider", features = [
  "native",
] }
vino-random = { path = "../vino-random" }
vino-rpc = { path = "../vino-rpc" }
vino-packet = { path = "../../sdk/crates/vino-packet" }
vino-entity = { path = "../../sdk/crates/vino-entity" }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.50"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0"
parking_lot = "0.11"


[dev-dependencies]
logger = { path = "../logger" }
test-logger = { path = "../test-logger" }
futures = "0.3"
vino-transport = { path = "../../sdk/crates/vino-transport", features = [
  "all",
] }
