[package]
name = "test-logger"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = { version = "1.0" }
syn = { version = "1.0", features = ["full"] }
logger = { path = "../logger" }
proc-macro-crate = "1.0.0"

[dev-dependencies]
logging = { version = "0.4", package = "log" }
