[package]
name = "test-component"
version = "0.0.1"
description = ""
authors = [""]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["guest"]
guest = []

[dependencies]
wapc-guest = "0.4.0"
serde = { version="1.0.126", features=["derive"] }
serde_json = "1.0.57"
serde_derive = "1.0.115"
serde_bytes = "0.11.5"
rmp-serde = "0.15.4"
lazy_static = "1.4.0"
vino-component = { path="../vino-component" }
vino-codec = { path="../vino-codec" }

[dev-dependencies]
structopt = "0.3.17"
serde_json = "1.0.57"
base64 = "0.13.0"

[profile.release]
# Optimize for small code size
opt-level = "z"
lto = true
