[package]
name = "vino-cli"
version = "0.1.0"
edition = "2018"
default-run = "vino"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vino-packet = { path = "../../sdk/crates/vino-packet" }
log = "0.4.11"
actix = "0.12.0"
actix-rt = "2.2.0"
structopt = "0.3.21"
nkeys = "0.1.0"
futures = "0.3.13"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
serde = "1.0.126"
thiserror = "1.0.24"
logger = { path = "../logger" }
vino-provider-cli = { path = "../vino-provider-cli" }
vino-runtime = { path = "../vino-runtime" }
vino-transport = { path = "../../sdk/crates/vino-transport" }
vino-host = { path = "../vino-host" }
vino-manifest = { path = "../vino-manifest" }
vino-codec = { path = "../../sdk/crates/vino-codec" }
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
test_bin = "0.3.0"
maplit = "1.0.2"
test-env-log = "0.2.7"

[[bin]]
name = "vino"
path = "src/main.rs"
