[package]
name = "vino-component"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.126", features=["derive"] }
serde_derive = "1.0.115"
rmp-serde = "0.15.4"
vino-codec = { path="../vino-codec" }
serde_with = "1.9.4"

[dev-dependencies]
env_logger = "0.8.4"
test-env-log = "0.2.7"
anyhow = "1.0.41"
log = "0.4.14"
