[package]
name = "vino-component"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.126", features=["derive"] }
vino-codec = { path="../vino-codec" }

[dev-dependencies]
env_logger = "0.8.4"
test-env-log = "0.2.7"
anyhow = "1.0.41"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
