[package]
name = "vino-component"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[features]
default = ["wasm"]
wasm = []
native = []

[dependencies]
vino-codec = { path = "../vino-codec" }
serde = { version = "1.0.126", features = ["derive"] }
serde-value = "0.7.0"

[dev-dependencies]
env_logger = "0.9"
test-env-log = "0.2.7"
anyhow = "1.0.41"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
