[package]
name = "vino-configfile"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.126", features=["derive"] }
config = "0.11.0"
directories-next = "2.0.0"
log = "0.4.14"
toml = "0.5.8"

[dev-dependencies]
env_logger = "0.8.4"
