[package]
name = "vino-entity"
version = "0.1.0"
edition = "2018"
license = "BSD-3-Clause"
description = "Entities found in a Vino network"
documentation = "https://docs.vino.dev"
keywords = ["vino", "flow"]
exclude = ["tests/*", ".github/*", ".gitignore"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
vino-macros = { path = "../vino-macros" }
serde = { version = "1.0.118", features = ["derive"] }
thiserror = "1.0.25"
url = "2.2.2"

[dev-dependencies]
pretty_assertions = "0.7.2"
