[package]
name = "vino-guest"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wapc-guest = "0.4.0"
serde = { version = "1.0.126" , features = ["derive"] }
serde_json = "1.0.57"
serde_derive = "1.0.115"
serde_bytes = "0.11.5"
rmp-serde = "0.15.4"
lazy_static = "1.4.0"