[package]
name = "vino-guest"
version = "0.1.0"
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version="1.0.126", features=["derive"] }
serde_derive = "1.0.115"
rmp-serde = "0.15.4"
