[package]
name = "vino-http"
version = "0.0.0"
edition = "2018"
description = """
grpc-web protocol translation for tonic services.
"""
readme = "README.md"
categories = ["network-programming", "asynchronous"]
keywords = ["rpc", "grpc", "grpc-web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vino-rpc = { path = "../vino-rpc" }
vino-types = { path = "../../sdk/crates/vino-types" }
vino-transport = { path = "../../sdk/crates/vino-transport" }
vino-entity = { path = "../../sdk/crates/vino-entity" }
tonic = { version = "0.5", default-features = false, features = ["transport"] }
http = "0.2"
base64 = "0.13"
futures-core = "0.3"
bytes = "1.0"
hyper = "0.14"
http-body = "0.4"
tower-service = "0.3"
log = "0.4"
pin-project = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
tokio-stream = "0.1.6"
serde_json = "1.0.68"
serde = { version = "1.0.118", features = ["derive"] }
thiserror = "1.0.26"

[dev-dependencies]
tonic = { version = "0.5", default-features = false, features = ["tls"] }
