[package]
name = "vino-lattice"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = { path = "../../../nats.rs" }
# nats = "0.13.0"
log = "0.4.14"
vino-rpc = { path = "../vino-rpc" }
vino-transport = { path = "../../sdk/crates/vino-transport", features = [
  "all",
] }
vino-entity = { path = "../../sdk/crates/vino-entity" }
vino-types = { path = "../../sdk/crates/vino-types" }
vino-codec = { path = "../../sdk/crates/vino-codec" }
thiserror = "1.0.26"
nkeys = "0.1.0"
serde = { version = "1.0.126", features = ["derive"] }
tokio = { version = "1.4.0", features = ["time", "rt-multi-thread"] }
tokio-stream = { version = "0.1.7" }
futures = "0.3.16"
parking_lot = { version = "0.11.1", features = [] }
actix-rt = "2.2.0"
once_cell = "1.5.2"

[dev-dependencies]
logger = { path = "../logger" }
test-logger = { path = "../test-logger" }
anyhow = "1.0.43"
test-vino-provider = { path = "../integration/test-vino-provider" }
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.7" }
