[package]
name = "vino-macros"
version = "0.1.0"
edition = "2018"
license = "BSD-3-Clause"
description = "Macros use by vino tools"
documentation = "https://docs.vino.dev"
keywords = ["macros", "vino"]
categories = ["wasm"]
exclude = ["tests/*", ".github/*", ".gitignore"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
vino-transport = { path = "../vino-transport" }
log = "0.4"
lazy_static = "1.4.0"
