[package]
authors = ["Jarrod Overson <jsoverson@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
name = "vino-manifest"
version = "0.1.0"

[dependencies]
vino-transport = { path = "../../sdk/crates/vino-transport", features = [
  "all",
] }

lazy_static = "1.4"
num-traits = "0.2.14"
regex = "1"
serde = "1.0"
serde-value = "0.7.0"
serde-with-expand-env = "1.1.0"
serde_json = "1.0"
serde_yaml = "0.8"
thiserror = "1.0"
tracing = "0.1"
vino-macros = { path = "../../sdk/crates/vino-macros" }

[dev-dependencies]
anyhow = "1.0"

pretty_assertions = "1"
logger = { path = "../logger" }
test-logger = { path = "../test-logger" }
