[package]
name = "vino-provider-cli"
version = "0.1.0"
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vino-rpc = { path = "../vino-rpc" }
logger = { path = "../logger" }
vino-packet = { path = "../../sdk/crates/vino-packet" }
vino-codec = { path = "../../sdk/crates/vino-codec" }
vino-invocation-server = { path = "../vino-invocation-server" }
tonic = { version = "0.5.0", features = ["tls"] }
tokio = { version = "1.4.0", features = [
  "macros",
  "fs",
  "net",
  "signal",
  "rt-multi-thread",
] }
futures = "0.3.15"
tokio-stream = "0.1.6"
serde = { version = "1.0.118", features = ["derive"] }
async-stream = "0.3.2"
rand = "0.8.4"
log = "0.4"
thiserror = "1.0.25"
tonic-reflection = "0.2.0"
tonic-web = "0.1.0"
structopt = "0.3.22"

[dev-dependencies]
logger = { path = "../logger" }
test-logger = { path = "../test-logger" }
test-vino-provider = { path = "../integration/test-vino-provider" }

reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.42"
