[package]
name = "vino-provider-cli"
version = "0.1.0"
edition = "2018"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
logger = { path = "../logger" }
vino-rpc = { path = "../vino-rpc" }
vino-lattice = { path = "../vino-lattice" }
vino-packet = { path = "../../sdk/crates/vino-packet" }
vino-codec = { path = "../../sdk/crates/vino-codec" }
vino-invocation-server = { path = "../vino-invocation-server" }
vino-transport = { path = "../../sdk/crates/vino-transport", features = [
  "all",
] }
vino-http = { path = "../vino-http" }
cfg-if = "1.0.0"

tonic = { version = "0.5", features = ["tls"] }
tonic-reflection = "0.2.0"

futures = "0.3.15"
tokio = { version = "1.4.0", features = [
  "macros",
  "fs",
  "net",
  "signal",
  "rt-multi-thread",
] }
tokio-stream = "0.1.6"
async-stream = "0.3.2"

serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.68"

rand = "0.8.4"
log = "0.4"
thiserror = "1.0.25"
structopt = "0.3.22"
nkeys = "0.1.0"

[dev-dependencies]
logger = { path = "../logger" }
test-logger = { path = "../test-logger" }
test-vino-provider = { path = "../integration/test-vino-provider" }
once_cell = "1.8"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.42"
