[package]
name = "vino-provider-cli"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
reflection = ["tonic-reflection"]

[dependencies]
logger = { path = "../logger" }
vino-rpc = { path = "../vino-rpc" }
vino-lattice = { path = "../vino-lattice" }
vino-packet = { path = "../../sdk/crates/vino-packet" }
vino-codec = { path = "../../sdk/crates/vino-codec" }
vino-invocation-server = { path = "../vino-invocation-server" }
vino-transport = { path = "../../sdk/crates/vino-transport", features = [
  "all",
] }
vino-http = { path = "../vino-http" }
cfg-if = "1.0.0"

tonic = { version = "0.6", features = ["tls"] }
tonic-reflection = { version = "0.3", default-features = false, optional = true }

futures = "0.3"
tokio = { version = "1", features = [
  "macros",
  "fs",
  "net",
  "signal",
  "rt-multi-thread",
] }
tokio-stream = "0.1.6"
async-stream = "0.3.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rand = "0.8"
tracing = "0.1"
thiserror = "1.0"
structopt = "0.3"
nkeys = { path = "../../forks/nkeys" }

[dev-dependencies]
logger = { path = "../logger" }
test-logger = { path = "../test-logger" }
test-vino-provider = { path = "../integration/test-vino-provider" }
once_cell = "1.8"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0"
serde_json = "1.0"