[package]
name = "vino-provider-lattice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
vino-rpc = { path = "../vino-rpc" }
vino-lattice = { path = "../vino-lattice" }
vino-provider = { path = "../../sdk/crates/vino-provider", features = [
  "native",
] }
parking_lot = "0.11.1"
tracing = "0.1"
thiserror = "1.0.25"
async-trait = "0.1.50"
futures = "0.3.17"

[dev-dependencies]
logger = { path = "../logger" }
test-logger = { path = "../test-logger" }
test-vino-provider = { path = "../integration/test-vino-provider" }
maplit = "1.0.2"
anyhow = "1.0.42"
tokio = { version = "1", features = ["macros"] }
tokio-stream = "0.1.7"
