[package]
name = "vino-provider-lattice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
test-integration = []

[dependencies]
vino-rpc = { path = "../vino-rpc" }
vino-lattice = { path = "../vino-lattice" }
vino-provider = { path = "../../sdk/crates/vino-provider", features = [
  "native",
] }
parking_lot = "0.11"
tracing = "0.1"
thiserror = "1.0"
async-trait = "0.1.50"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
tokio-stream = "0.1.7"
